tests/invalid/invalid_wildcard_missing_semicolon.csl
config InvalidWildcardSemicolon {
  target: {
    *: { lib_path: string }
  };
}
